src/styles/globals.css
:root {
  color-scheme: light dark;
  --primary-color: #fff;
  --secondary-color: #1c1c1c;
  --tertiary-color: #eef0f2;
  --contrast-color: #999;
  --max-width: 1024px;
  --text-sm: 0.875rem;
  --text-base: 1rem;
  --text-lg: 1.125rem;
  --text-xl: 1.25rem;
  --text-2xl: 1.5rem;
  --font-normal: 400;
  --font-semibold: 600;
  --space-x-0: 0;
  --space-x-0_5: 0.5rem;
  --space-x-1: 1rem;
  --space-x-2: 2rem;
  --space-x-4: 4rem;
  --transition-200: all 0.2s;
}

html[data-theme="dark"] {
  --primary-color: #1c1c1c;
  --secondary-color: #fff;
  --tertiary-color: #2b2b2b;
  --contrast-color: #777;
}

::selection {
  color: var(--primary-color);
  background: var(--secondary-color);
}

* {
  box-sizing: border-box;
  padding: var(--space-x-0);
  margin: var(--space-x-0);
}

html,
body {
  max-width: 100vw;
  font-family: 'Inter';
  overflow-x: hidden;
}

body {
  color: var(--secondary-color);
  text-rendering: optimizeLegibility;
  background-color: var(--primary-color);
  border-top: 5px solid var(--secondary-color);
  -webkit-font-smoothing: antialiased;
}

a {
  color: inherit;
  text-decoration: none;
}

ol,
ul {
  list-style: none;
}

